Added Open Source Code link to coded by message

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
       </div>
       <div class="coded-by">
         <small>
-          This project was coded by Sue McMillan using HTML, CSS, Bootstrap and
-          Javascript.
+          <a href="https://github.com/Strumhum/weather-app" target="_blank" rel="noreferrer">Open Source Code</a> by Sue McMillan using HTML, CSS, Bootstrap, Javascript and APIs.
         </small>
       </div>
     </div>
