--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="col-sm-4">
           <button id="current-location" class="location-button">▹ Use my current location</button>
         </div>
-        <div class="temp-units col-sm-8"><h4><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link">°F</a></h4></div>
+        <div class="temp-units col-sm-8"><h4><a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a></h4></div>
       </div>
       <div class="row weather-today">
         <div class="col-sm-5">
