--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -24,27 +28,34 @@
     <div class="container">
       <h2>Weather</h2>
       <form class="search-form" id="search-form">
-      <div class="row">
-        <div class="search-field col-sm-10">
-          <input
-            type="text"
-            id="city-input"
-            class="form-control"
-            placeholder="Enter a city..."
-            autofocus="on"
-            autocomplete="off"
-          />
+        <div class="row">
+          <div class="search-field col-sm-10">
+            <input
+              type="text"
+              id="city-input"
+              class="form-control"
+              placeholder="Enter a city..."
+              autofocus="on"
+              autocomplete="off"
+            />
+          </div>
+          <div class="col-sm-2">
+            <input type="submit" value="Search" class="form-control btn" />
+          </div>
         </div>
-        <div class="col-sm-2">
-          <input type="submit" value="Search" class="form-control btn"></button>
-        </div>
-      </div>
       </form>
       <div class="row location">
         <div class="col-sm-4">
-          <button id="current-location" class="location-button">▹ Use my current location</button>
+          <button id="current-location" class="location-button">
+            ▹ Use my current location
+          </button>
         </div>
-        <div class="temp-units col-sm-8"><h4><a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a></h4></div>
+        <div class="temp-units col-sm-8">
+          <h4>
+            <a href="#" id="celsius-link">°C</a> |
+            <a href="#" id="fahrenheit-link">°F</a>
+          </h4>
+        </div>
       </div>
       <div class="row weather-today">
         <div class="col-sm-5">
@@ -55,7 +66,7 @@
           <p id="wind">Wind: 8 mph</p>
         </div>
         <div class="col-sm-3 weather-graphic">
-          <i class="icon-wi_cloudy" alt="cloudy"></i>
+          <i id="main-icon" class="icon-wi_cloudy"></i>
         </div>
         <div class="todaytemp col-sm-4">
           <p id="main-temp" class="main-temp">22°C</p>
@@ -102,7 +113,13 @@
       </div>
       <div class="coded-by">
         <small>
-          <a href="https://github.com/Strumhum/weather-app" target="_blank" rel="noreferrer">Open Source Code</a> by Sue McMillan using HTML, CSS, Bootstrap, Javascript and APIs.
+          <a
+            href="https://github.com/Strumhum/weather-app"
+            target="_blank"
+            rel="noreferrer"
+            >Open Source Code</a
+          >
+          by Sue McMillan using HTML, CSS, Bootstrap, Javascript and APIs.
         </small>
       </div>
     </div>
