Added code to display current weather high and low temp

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <div class="todaytemp col-sm-4">
           <p id="main-temp" class="main-temp">22°C</p>
           <h5 class="main-high-low">
-            <span class="high-temp">High 27°C</span>
-            <span class="low-temp"> 15°C</span>
+            <span id="main-high-temp" class="high-temp">High 27°C</span>
+            <span id="main-low-temp" class="low-temp"> Low 15°C</span>
           </h5>
         </div>
       </div>
