Styling to "coded by" message

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
             rel="noreferrer"
             >Open Source Code</a
           >
-          by Sue McMillan using HTML, CSS, Bootstrap, Javascript and APIs.
+          by Sue McMillan using HTML, CSS, Bootstrap, Javascript and Openweather
+          & Geolocation API.
         </small>
       </div>
     </div>
