Added forecast row by html injected by JS and pulled in data except icon

--- a/index.html
+++ b/index.html
@@ -76,56 +76,7 @@
           </h5>
         </div>
       </div>
-      <div class="row forecast">
-        <div class="day-one col-sm-2">
-          <p>Friday</p>
-          <i class="icon-wi_cloudy" alt="cloudy"></i>
-          <p class="forecast-high-low">
-            <span class="high-temp">27°C</span>
-            <span class="low-temp"> 15°C</span>
-          </p>
-        </div>
-        <div class="day-two col-sm-2">
-          <p>Saturday</p>
-          <i class="icon-wi_drizzle" alt="drizzle"></i>
-          <p class="forecast-high-low">
-            <span class="high-temp">27°C</span>
-            <span class="low-temp"> 15°C</span>
-          </p>
-        </div>
-        <div class="day-three col-sm-2">
-          <p>Sunday</p>
-          <i class="icon-wi_partly-sunny" alt="partly sunny"></i>
-          <p class="forecast-high-low">
-            <span class="high-temp">27°C</span>
-            <span class="low-temp"> 15°C</span>
-          </p>
-        </div>
-        <div class="day-four col-sm-2">
-          <p>Monday</p>
-          <i class="icon-wi_sunny" alt="sunny"></i>
-          <p class="forecast-high-low">
-            <span class="high-temp">27°C</span>
-            <span class="low-temp"> 15°C</span>
-          </p>
-        </div>
-        <div class="day-five col-sm-2">
-          <p>Tuesday</p>
-          <i class="icon-wi_hail" alt="hail"></i>
-          <p class="forecast-high-low">
-            <span class="high-temp">27°C</span>
-            <span class="low-temp"> 15°C</span>
-          </p>
-        </div>
-        <div class="day-six col-sm-2">
-          <p>Wednesday</p>
-          <i class="icon-wi_rain" alt="rain"></i>
-          <p class="forecast-high-low">
-            <span class="high-temp">27°C</span>
-            <span class="low-temp"> 15°C</span>
-          </p>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
       <div class="message">
         <span>
           <p>Don't forget your</p>
