Removed temperature conversion

--- a/index.html
+++ b/index.html
@@ -50,12 +50,6 @@
             ▹ Use my current location
           </button>
         </div>
-        <div class="temp-units col-sm-8">
-          <h4>
-            <a href="#" id="celsius-link">°C</a> |
-            <a href="#" id="fahrenheit-link">°F</a>
-          </h4>
-        </div>
       </div>
       <div class="row weather-today">
         <div class="col-sm-5">
@@ -86,7 +80,7 @@
             >Open Source Code</a
           >
           by Sue McMillan using HTML, CSS, Bootstrap, Javascript and Openweather
-          & Geolocation API.
+          & Geolocation APIs.
         </small>
       </div>
     </div>
